--- a/package.json
+++ b/package.json
@@ -16,14 +16,22 @@
 		"lint": "eslint . --max-warnings 0",
 		"inspect-config": "eslint --inspect-config"
 	},
+	"dependencies": {
+		"@eslint/compat": "^1.1.1",
+		"@eslint/eslintrc": "^3.1.0",
+		"eslint-plugin-import": "^2.30.0"
+	},
 	"devDependencies": {
 		"@eslint/config-inspector": "^0.5.4",
 		"@stylistic/eslint-plugin": "^2.7",
 		"@types/eslint": "^9.6",
+		"@types/eslint__eslintrc": "^2.1",
 		"@types/eslint__js": "^8.42",
+		"@types/node": "^22.5",
 		"dts-buddy": "^0.5",
 		"eslint": "^9.9",
 		"eslint-plugin-svelte": "^2.43",
+		"globals": "^15.9",
 		"typescript": "^5.5",
 		"typescript-eslint": "^8.4"
 	},
