replace `main` field with `exports` in package.json

--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
 	"author": "Jeremiasz Major <jrh.mjr@gmail.com>",
 	"repository": "jrmajor/eslint-config",
 	"type": "module",
-	"main": "src/index.js",
-	"types": "src/types.d.ts",
 	"files": [
 		"src"
 	],
+	"exports": {
+		".": {
+			"default": "./src/index.js",
+			"types": "./src/types.d.ts"
+		}
+	},
 	"scripts": {
 		"check": "tsc",
 		"check:watch": "tsc --watch",
